added docs for invitations
